Fix headings and remove a couple extraneous code cells

--- a/notebooks/03.01-Dark-current-The-ideal-case.ipynb
+++ b/notebooks/03.01-Dark-current-The-ideal-case.ipynb
@@ -39,7 +39,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A function to generate dark frames\n",
+    "### Convenience functions\n",
+    "\n",
+    "A couple of functions that will be reused a few times in this notebook are defined below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A function to generate dark frames**\n",
     "\n",
     "This function generates a set of dark frames. It will be used several times below."
    ]
@@ -72,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A function to plot the distribution of dark counts\n",
+    "**A function to plot the distribution of dark counts**\n",
     "\n",
     "The function below plots the "
    ]
@@ -185,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Illustration with dark current only, no read noise\n",
+    "## Illustration with dark current only\n",
     "\n",
     "For the purposes of illustrating some of the properties of dark current and dark frames we'll generate some simulated images in which the counts are due to dark current alone. We'll use these values:\n",
     "\n",
@@ -266,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The distribution of dark counts follows a Poisson distribution\n",
+    "### Dark counts follows a Poisson distribution\n",
     "\n",
     "The distribution below shows a normalized histogram of number of pixels as a function of dark counts in each pixel for one of the simulated dark frames. Overlaid on the histogram is a Poisson distribution with a mean of $d_e(t_{exp}) = d_C(T) * t_{exp} / g$, where $t_{exp}$ is the exposure time."
    ]
@@ -299,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Illustration with dark current *and* read noise\n",
+    "## Illustration with dark current and read noise\n",
     "\n",
     "Now let's run through the same couple of plots with a non-zero read noise. For the sake of illustration, we'll look at two cases:\n",
     "\n",
@@ -321,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### High noise: Read noise is about the same as the expected dark current\n",
+    "### High noise\n",
     "\n",
     "In this first case, the read noise and the dark current are both 10$e^-$. As we will see shortly, the dark frame really measures read noise, not dark current, under these circumstances."
    ]
@@ -367,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### High noise: This dark frame measures noise, not dark current \n",
+    "**This dark frame measures noise, not dark current**\n",
     "\n",
     "The pixel distribution is clearly a Gaussian distribution with a width determined by the read noise, not the underlying Poisson distribution that a dark frame is trying to measure. The only way around this (assuming the dark current is large enough that it needs to be subtracted at all) is to make the exposure long enough that the expected counts exceed the dark current.\n",
     "\n",
@@ -378,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combining many noisy dark images does not recover the dark current "
+    "**Combining does not recover the dark current**"
    ]
   },
   {
@@ -415,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Low noise: Read noise much lower than dark current \n",
+    "### Low noise \n",
     "\n",
     "In this case the read noise is 1 $e^-$, lower by a factor of ten than the expected dark current for this exposure time, 10$e^-$.\n",
     "\n",
@@ -474,53 +483,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Low noise: the dark frame is measuring dark current \n",
+    "**Dark frame is measuring dark current**\n",
     "\n",
-    "Unlike the high noise case, the pixels in a single low-noise dark frame follow the Poisson distribution expected for the dark current in this simulated camera."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counts, bins = np.histogram((n_images * image_average).flatten(), bins=20, density=True)\n",
-    "\n",
-    "expected_mean_dark = dark_rate * exposure / gain\n",
-    "pois = stats.poisson(expected_mean_dark * n_images)\n",
-    "pois_x = np.arange(0, 300, 1)\n",
-    "pois_pmf = pois.pmf(pois_x)\n",
-    "\n",
-    "gauss = stats.norm(loc=expected_mean_dark * n_images, scale=low_read_noise / gain * np.sqrt(n_images))\n",
-    "gauss_x = pois_x\n",
-    "gauss_pdf = gauss.pdf(gauss_x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 10))\n",
-    "\n",
-    "scaled_counts = counts * n_images\n",
-    "scaled_bins = bins / n_images\n",
-    "bin_mid_points = (scaled_bins[1:] + scaled_bins[:-1]) / 2\n",
-    "\n",
-    "plt.bar(bin_mid_points, scaled_counts, scaled_bins[1:] - scaled_bins[:-1],\n",
-    "        label='Dark current counts')\n",
-    "\n",
-    "plt.plot(pois_x / n_images, pois_pmf * n_images, color='C1',\n",
-    "         label=\"Scaled Poisson distribution\")\n",
-    "\n",
-    "plt.plot(gauss_x / n_images, gauss_pdf * n_images, color='C2', \n",
-    "         label=\"Scaled Gaussian distribution\")\n",
-    "\n",
-    "plt.ylim(0, 1)\n",
-    "plt.grid()\n",
-    "plt.legend();"
+    "Unlike the high noise case, the pixels in a single low-noise dark frame follow the Poisson distribution expected for the dark current in this simulated camera. When multiple images are combined the pixels still follow the Poisson distribution, as expected in this case."
    ]
   }
  ],
