Add more detail to description of some dark current parameters

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -27,7 +27,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# from astropy import units as u\n",
     "from astropy.nddata import CCDData\n",
     "from astropy.visualization import hist\n",
     "\n",
@@ -207,7 +206,13 @@
     "\n",
     "The image below is a combination of 20 dark frames, each a 1000 sec exposure. That exposure time was chosen so that the expected number of dark electrons was at least somewhat larger than the read noise expected in a combination of 20 images. As we saw in the previous notebook, unless that is the case the dark frames will measure read noise instead of dark current.\n",
     "\n",
-    "This camera has a dark current of $0.01 e^-$/sec/pixel and read noise of roughly $10 e^-$/read/pixel/. An exposure time of 1000 sec means an expected dark level in each exposure of $10 e^-$. By combining 20 of the images, the expected noise in the combination is reduced by a factor of $\\sqrt{20}$ to $2.2 e^-$/pixel. This puts us in the \"low read noise\" limit in the previous notebook about ideal dark current.\n",
+    "This camera has a dark current of $0.01 e^-$/sec/pixel and read noise of roughly $10 e^-$/read/pixel/, so the exposure time at which the dark current is as large as the read noise is\n",
+    "\n",
+    "$$\n",
+    "t_\\text{dark, min} = \\frac{10 e^-/\\text{pixel}}{0.01 e^-/\\text{sec/pixel}} = 1000~\\text{sec}.\n",
+    "$$\n",
+    "\n",
+    "By combining 20 of the images, the expected noise in the combination is reduced by a factor of $\\sqrt{20}$ to $2.2 e^-$/pixel. This puts us in the \"low read noise\" limit in the previous notebook about ideal dark current.\n",
     "\n",
     "Measuring the dark current once you have the images is relatively straightforward: subtract the bias, multiply the result by the gain and then divide by the exposure time to obtain the dark current in $e^-$/pixel/sec."
    ]
@@ -290,7 +295,13 @@
     "\n",
     "The vast majority of the pixels in the image have a dark current around the value promised by the manufacturer, 0.01 $e^-$/sec; the highest nominally have dark current 98 $e^-$/sec.\n",
     "\n",
-    "However, there is  an upper limit to the dark current that can be measured in a particular exposure because there is an upper limit to the number of counts a CCD can represent. For this camera that limit is $2^{16} -1$, or $65,563$. If we convert that to a dark current for a 1000 sec exposure, it is approximately 98 $e^-$/sec. For the hottest pixels in this image, that is the *lower limit* of the dark current for those pixels.\n",
+    "However, there is  an upper limit to the dark current that can be measured in a particular exposure because the CCD saturates once the counts become large enough. In other words, there is an upper limit to the number of counts a CCD can represent; for this camera the limit is $2^{16} -1$, or $65,563$ counts. If we convert that to a dark current for a 1000 sec exposure, it is approximately \n",
+    "\n",
+    "$$\n",
+    "\\text{dark current for saturated pixel} =  \\text{gain} \\times \\frac{\\text{saturation counts}}{\\text{exposure time}} =  1.5 \\frac{e^-}{\\text{count}}\\frac{65,563~\\text{count}}{1000 \\text{sec}} = 98 \\frac{e^-}{\\text{sec}}.\n",
+    "$$\n",
+    "\n",
+    "For the hottest pixels in this image, that is the *lower limit* of the dark current for those pixels.\n",
     "\n",
     "The dark current is also not well estimated for pixels a bit below the maximum because CCDs stop responding linearly once they pass a pixel value that depends on the camera. For this camera, the linearity limit is around 55,000 counts, corresponding to a dark current of roughly  82 $e^-$/sec.\n",
     "\n",
