Make sure image collection is refreshed before displaying list of images

--- a/notebooks/03.05-Calibrate-dark-images.ipynb
+++ b/notebooks/03.05-Calibrate-dark-images.ipynb
@@ -153,7 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex1_images_reduced.summary['file', 'imagetyp', 'exptime', 'filter']"
+    "ex1_images_reduced.refresh()\n",
+    "ex1_images_reduced.summary['file', 'imagetyp', 'exptime', 'filter', 'combined']"
    ]
   },
   {
