Rename a couple of dark sections

--- a/notebooks/03.02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03.02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reality: most of your dark frame is noise and not all of the time dependent artifacts are dark current"
+    "# Real dark current: noise and other artifacts"
    ]
   },
   {
