--- a/notebooks/03.04-Handling-overscan-and-bias-for-dark-frames.ipynb
+++ b/notebooks/03.04-Handling-overscan-and-bias-for-dark-frames.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make a choice about next steps for darks\n"
+    "# Handling overscan and bias for dark frames"
    ]
   },
   {
