Fix incorrect variable name

--- a/notebooks/05.04-Combining-flats.ipynb
+++ b/notebooks/05.04-Combining-flats.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "calibrated_path = Path('example1-reduced')\n",
     "\n",
-    "ifc = ccdp.ImageFileCollection(p)"
+    "ifc = ccdp.ImageFileCollection(calibrated_path)"
    ]
   },
   {
