Rough drafts on example 2 flat reduction and combination

--- a/notebooks/05.03-Calibrating-the-flats.ipynb
+++ b/notebooks/05.03-Calibrating-the-flats.ipynb
@@ -236,8 +236,15 @@
     "        raise RuntimeError('Closest dark exposure time is {} for flat of exposure '\n",
     "                           'time {}.'.format(closest_dark_exposure, a_flat.header['exptime']))\n",
     "    \n",
-    "    return closest_dark_exposure\n",
-    "\n",
+    "    return closest_dark_exposure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "closest_dark = find_nearest_dark_exposure(a_flat_reduced, actual_exposure_times)"
    ]
   },
@@ -326,6 +333,288 @@
     "    # Save the result; there are some duplicate file names so pre-pend \"flat\"\n",
     "    ccd.write(reduced_path / ('flat-' + save_name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2\n",
+    "\n",
+    "### UPDATE UPDATE\n",
+    "\n",
+    "The images for this example are from chip 0 of the Large Format Camera at Palomar Observatory. The raw images are at XXX, and this notebook assumes that you have worked through the notebooks on bias and dark so that there is a folder called `example2-reduced` in the same folder as this notebook. \n",
+    "\n",
+    "The cell below checks that the files needed are available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_path = Path('example2-reduced')\n",
+    "\n",
+    "ifc_reduced = ccdp.ImageFileCollection(reduced_path)\n",
+    "\n",
+    "combined_dark_files = ifc_reduced.files_filtered(imagetyp='dark', combined=True)\n",
+    "\n",
+    "n_combined_dark = len(combined_dark_files)\n",
+    "\n",
+    "n_dark_expected = 1\n",
+    "\n",
+    "if n_combined_dark < n_dark_expected:\n",
+    "    raise RuntimeError('One or more combined dark is missing. Please re-run the dark notebook.')\n",
+    "elif n_combined_dark > n_dark_expected:\n",
+    "    raise RuntimeError('There are more combined dark frames than expected.')\n",
+    "    \n",
+    "expected_exposure_times = set([90])\n",
+    "actual_exposure_times = set(h['exptime'] for h in ifc_reduced.headers(imagetyp='dark', combined=True))\n",
+    "\n",
+    "if (expected_exposure_times - actual_exposure_times):\n",
+    "    raise RuntimeError('Encountered unexpected exposure time in combined darks. '\n",
+    "                       'The unexpected times are {}'.format(actual_exposure_times - expected_exposure_times))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll go through this example twice: once with a single image to explain each step, then processing all of the flat frames in the directory of raw data.\n",
+    "\n",
+    "The raw data should be in the directory `python_imred_data`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = Path('example-thermo-electric')\n",
+    "\n",
+    "ifc_raw = ccdp.ImageFileCollection(raw_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, get one of the flat frames as a `CCDData` object and display it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_flat = CCDData.read(ifc_raw.files_filtered(imagetyp='flat', include_path=True)[0], unit='adu')\n",
+    "\n",
+    "show_image(a_flat, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UPDATE UPDATE UPDATE\n",
+    "\n",
+    "There is not a lot of variation in this. Note that the overscan region on the right stands out as a black bar, and that there is apparently also an overscan region across the top of the chip. There appears to be a slight variaion in pixel values from the bottom to the top of the image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subtract overscan and trim: only trim for this camera\n",
+    "\n",
+    "### UPDATE UPDATE UPDATE\n",
+    "\n",
+    "The overscan is useful for the LFC and needs to be subtracted and trimmed off. See [this example in the dark reduction notebook](03.05-Calibrate-dark-images.ipynb#Decide-which-calibration--steps-to-take) for a review of the overscan parameters. The overscan region is the Python slice `[:, 2055:]` while the region to be retained after trimming is the Python slice `[:, :4096]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trim the overscan\n",
+    "a_flat_reduced = ccdp.trim_image(a_flat[:, :4096])\n",
+    "\n",
+    "# Display the result so far\n",
+    "show_image(a_flat_reduced, cmap='gray')\n",
+    "plt.title('Single flat frame, overscan trimmed')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trimming off the overscan but such a big difference primarily because the image stretch changed; the lowest pixel values are now around 18000 instead of 2000. With that change the non-uniformity across the detector is much clearer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subtract bias, if necessary\n",
+    "\n",
+    "For this particular set of images there is a combined dark with exposure time 90 sec. The flat images have the exposure times listed below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set(ifc_raw.summary['exptime'][ifc_raw.summary['imagetyp'] == 'FLAT'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These are quite different than the exposure time of the dark frames so the dark will need to be scaled by exposure time, which means that the bias has been removed from the combined dark.\n",
+    "\n",
+    "Because of that, the bias needs to be removed the flat before subtracting the dark."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_bias = list(ifc_reduced.ccds(combined=True, imagetyp='bias'))[0]\n",
+    "a_flat_reduced = ccdp.subtract_bias(a_flat_reduced, combined_bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the result so far\n",
+    "show_image(a_flat_reduced, cmap='gray')\n",
+    "plt.title('Single flat frame, overscan trimmed and bias subtracted')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subtract dark current, scaling if necessary (scale down when possible)\n",
+    "\n",
+    "Here we will need to scale the dark from the 90 sec exposure time of the dark frame to the exposure time of each flat image. The [ccdproc function `subtract_dark`]() provides keywords for doing this scaling automatically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "closest_dark = find_nearest_dark_exposure(a_flat_reduced, actual_exposure_times, tolerance=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It will be convenient to be able to access the darks via a dictionary whose key is the exposure time, so we set that up below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_darks = {ccd.header['exptime']: ccd for ccd in ifc_reduced.ccds(imagetyp='dark', combined=True)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we subtract the dark from the flat and display the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_flat_reduced = ccdp.subtract_dark(a_flat_reduced, combined_darks[closest_dark], \n",
+    "                                    exposure_time='exptime', exposure_unit=u.second, scale=True)\n",
+    "show_image(a_flat_reduced, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is not much change here; that is not surprising since the dark current in this camera is low."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calibrated all of the flats in the folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below calibrates each of the flats in the folder, automatically grabbing the correct combined dark for each flat. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ccd, file_name in ifc_raw.ccds(imagetyp='FLAT',            # Just get the bias frames\n",
+    "                                   return_fname=True           # Provide the file name too.\n",
+    "                                  ):\n",
+    "    \n",
+    "    save_name, _ = file_name.split('.gz')\n",
+    "    \n",
+    "    # Trim the overscan\n",
+    "    ccd = ccdp.trim_image(ccd[:, :4096])\n",
+    "    \n",
+    "    # Find the correct dark exposure\n",
+    "    closest_dark = find_nearest_dark_exposure(ccd, actual_exposure_times, tolerance=100)\n",
+    "    \n",
+    "    # Subtract the dark current \n",
+    "    ccd = ccdp.subtract_dark(ccd, combined_darks[closest_dark],\n",
+    "                             exposure_time='exptime', exposure_unit=u.second, scale=True)\n",
+    "\n",
+    "    # Save the result\n",
+    "    ccd.write(reduced_path / save_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
